2013-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed NULL dereference when use-dht is off.

2013-04-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: improve DirFile; add slash for directories in ARRAY_INFO.
	* FileAccess.cc, FileAccess.h, FileCopy.cc, FileCopy.h, FileSet.cc,
	  FileSet.h, Fish.cc, GetFileInfo.cc, GetFileInfo.h, Http.cc,
	  LocalAccess.cc, NetAccess.cc, NetAccess.h, SFtp.cc, SFtp.h,
	  ftpclass.cc: use FileSet for ARRAY_INFO; add READLINK support in sftp.

2013-04-12  Alexander V. Lukyanov <lav@yars.free.net>

	* DHT.cc, DHT.h, Torrent.cc, Torrent.h: (DenounceDHT) new method; use it.
	* complete.cc, FileGlob.cc, SFtp.cc: show .. and . in glob results.
	* FileSetOutput.cc: add -a option for completion results display to show
	  dot files.

2013-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: change reget to "resume transfer".

2013-03-11  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: list all jobs from the top.
	* Job.cc: don't add empty line for no-session jobs.
	* IdNameCache.cc: fixed lookup by name.

2013-02-27  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, resource.cc: add SNI support.
	* commands.cc, NetAccess.cc: add cls -a option; don't filter out
	  . and .. by default.
	* TorrentTracker.cc: Enter/Leave parent for proper debug context.
	* Torrent.cc: use Enter/Leave for proper debug context.
	* Torrent.cc: better status when shutting down.
	* TorrentTracker.{cc,h}: add UDP tracker IPv6 support as action 4;
	  fixed error handling; fixed loop range.

2013-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: add numeric key for udp tracker.
	* buffer.cc, buffer.h: (Append(xstring)) new method.
	* TorrentTracker.cc, TorrentTracker.h: add udp tracker support.

2013-02-25  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h, TorrentTracker.cc, TorrentTracker.h:
	  split off TorrentTracker; add TrackerBackend class; prepare